examples/test/testpolicy5098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5098
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key36: value18
      key2: value28
      key26: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value39
      podSelector:
        matchLabels:
          key10: value44
          key39: value30
          key36: value35
